# autonomous-warehouse-robot-manipulator

./: README.md  frames_2025-11-29_23.12.04.gv  frames_2025-11-29_23.14.48.gv  frames_2025-11-29_23.18.27.gv  frames_2025-12-04_22.46.14.gv  frames_2025-12-05_19.04.10.gv  frames_2025-12-05_19.13.28.gv
install/: local_setup.sh  setup.sh
install/warehouse_robot_core/share/warehouse_robot_core/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/warehouse_robot_description/share/warehouse_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/warehouse_robot_gazebo/share/warehouse_robot_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/warehouse_robot_manipulation/share/warehouse_robot_manipulation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/warehouse_robot_navigation/share/warehouse_robot_navigation/: local_setup.bash  local_setup.dsv  (+8 more)
log/: latest_build
src/warehouse_robot_core/: package.xml  setup.py
src/warehouse_robot_description/: CMakeLists.txt  README.md  package.xml
src/warehouse_robot_description/launch/: description.launch.py  display.launch.py
src/warehouse_robot_description/rviz/: robot_view.rviz
src/warehouse_robot_description/urdf/: gripper.urdf.xacro  manipulator.urdf.xacro  mobile_base.urdf.xacro  mobile_base.urdf1.xacro  robot.urdf.xacro  sensors.urdf.xacro
src/warehouse_robot_gazebo/: CMakeLists.txt  package.xml
src/warehouse_robot_gazebo/launch/: gazebo.launch.py  spawn_robot.launch.py  warehouse_world.launch.py
src/warehouse_robot_gazebo/worlds/: empty_warehouse.world  warehouse.world
src/warehouse_robot_manipulation/: CMakeLists.txt  package.xml
src/warehouse_robot_manipulation/config/: warehouse_layout.yaml
src/warehouse_robot_manipulation/launch/: manipulation.launch.py
src/warehouse_robot_manipulation/scripts/: pick_and_place_node.py
src/warehouse_robot_navigation/: CMakeLists.txt  package.xml
src/warehouse_robot_navigation/config/: nav2_params.yaml  slam_params.yaml  waypoints.yaml
src/warehouse_robot_navigation/launch/: full_navigation.launch.py  map_server.launch.py  nav2.launch.py  navigation.launch.py  slam.launch.py
src/warehouse_robot_navigation/maps/: warehouse_map.pgm  warehouse_map.yaml
(+52 files in other folders)
