<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>warehouse_robot_manipulation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="o_oji@todo.todo">o_oji</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>warehouse_robot_description</depend>
  <depend>warehouse_robot_gazebo</depend>
  <depend>warehouse_robot_navigation</depend>


  <build_depend>rclpy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav2_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>launch</build_depend>
  <build_depend>launch_ros</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
